# Get-Your

./: .gitignore  ARCHITECTURE.md  CONTRIBUTORS.txt  Dockerfile  README.md  main.py  pyproject.toml  redis.conf  supervisord.conf
.github/: CODEOWNERS  Dockerfile
.github/ISSUE_TEMPLATE/: bug_report.md  uat-bug.md
.github/workflows/: main_getyourconnexion.yml
get_your/: .editorconfig  .gitignore  CONTRIBUTORS.txt  LICENSE  README.md  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  manage.py  manage_tests.py  merge_production_dotenvs_in_dotenv.py  pyproject.toml  supervisord - Copy.conf
get_your/.devcontainer/: devcontainer.json
get_your/app/: apps.py  backend.py  constants.py  context_processors.py  forms - Copy.py  forms.py  models - Copy.py  models.py  tasks.py  urls.py  views.py
get_your/config/: middleware.py  routers.py  urls.py  wsgi.py
get_your/dashboard/: admin.py  apps.py  backend.py  forms.py  models.py  tests.py  urls.py  views - Copy.py  views.py
get_your/docs/: __init__.py  conf.py  howto.rst  index.rst  make.bat  users.rst
get_your/files/: admin.py  apps.py  backend.py  forms.py  tests.py
get_your/get_your/: __init__.py  conftest.py  constants.py  tasks.py
get_your/monitor/: __init__.py  admin.py  apps.py  constants.py  handlers.py  models.py  wrappers.py
get_your/ref/: admin.py  apps.py  models.py  views.py
get_your/requirements/: base.txt  development.txt  local.txt  production.txt
get_your/tests/: test_merge_production_dotenvs_in_dotenv.py  test_middleware.py
getyour/: Dockerfile  init.sh  manage.py  manage_tests.py  requirements.txt  secrets_dev.json.template  supervisord.conf
getyour/app/: apps.py  backend.py  build_hash.py  constants.py  context_processors.py  decorators.py  forms.py  models.py  qualification_status.py  signals.py  tasks.py  urls.py  views.py
getyour/blobviewer/: apps.py  urls.py  views.py
getyour/getyour/: middleware.py  routers.py  urls.py  wsgi.py
getyour/log/: README.md  admin.py  handler.py  handlers.py  models.py  wrappers.py
getyour/log_ext/: admin.py  apps.py  handlers.py  models.py
getyour/logger/: admin.py  apps.py  constants.py  handlers.py  models.py
getyour/usercontent/: apps.py  urls.py  views.py
mobileVers/: .dockerignore  .gitignore  AMI.csv  Dockerfile  compare.csv  db.sqlite3  entrypoint.sh  init.sh  manage.py  requirements.txt
mobileVers/Andrew - Backend/: addressCheck.py  twilioIntegration.py
mobileVers/application/: addressCheck.py  admin.py  backend.py  compare.csv  forms.py  models.py  twilioIntegration.py  urls.py  validators.py  views.py
mobileVers/dashboard/: admin.py  backend.py  forms.py  models.py  urls.py  views.py
mobileVers/mobileVers/: Asheesh  (+5 more)
ref/: rearchitecture_phase1.vsdx  rearchitecture_phase2.vsdx  uat_plan.md
reference/: rearchitecture_phase0.vsdx
(+691 files in other folders)
