[project]
name = "Get-Your"
version = "6.9.1"
description = "Platform for Get-Your income-qualified program universal application"
readme = "README.md"
requires-python = "~=3.8.0"
dependencies = [
    "django==4.1.8",
    "django-environ==0.10.0",
    "django-phonenumber-field[phonenumbers]==7.1.0",
    "django-q2==1.6.1",
    "django-redis==5.4.0",
    "django-storages[azure]==1.12.3",
    "gunicorn==20.1.0",
    "hiredis==2.3.2",
    "httpagentparser==1.9.5",
    "pendulum==2.1.2",
    "psycopg2-binary==2.9.6",
    "python-magic==0.4.27",
    "python-magic-bin~=0.4",
    "redis==5.0.3",
    "rich==13.9.4",
    "sendgrid==6.6.0",
    "twilio==8.1.0",
    "usaddress==0.5.10",
    "usps-api==0.5",
    "whitenoise==6.4.0",
]
